--- a/pom.xml
+++ b/pom.xml
@@ -1,29 +1,84 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.mlab.patterns</groupId>
-	<artifactId>Patterns</artifactId>
-	<version>1.0</version>
-	<packaging>jar</packaging>
-
-	<name>Patterns</name>
-	<url>http://maven.apache.org</url>
-
+		<name>Patterns</name>
+		<groupId>com.mlab.patterns</groupId>
+		<artifactId>Patterns</artifactId>
+		<version>1.0</version>
+		<packaging>jar</packaging>
+				
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<install-dir>${project.build.directory}</install-dir>
 	</properties>
 
+	<build>
+		<plugins>
+			<!-- Compiler plugin (seleccionar version de java ) -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<!-- Copia las dependencias en el directorio libs de target -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.7</version>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/libs</outputDirectory>
+							<overWrite>true</overWrite>
+							<!-- <overWriteReleases>false</overWriteReleases> -->
+							<!-- <overWriteSnapshots>false</overWriteSnapshots> -->
+							<!-- <overWriteIfNewer>true</overWriteIfNewer> -->
+							<!-- other configurations here -->
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	<!-- No me funciona a 23/1/2014 -->
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<configuration>
+					<reportOutputDirectory>${basedir}/site</reportOutputDirectory>
+					<destDir>apidocs</destDir>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
+
 	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.6</version>
-		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.4</version>
+		</dependency>
 	</dependencies>
+	
+
 </project>
